--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
-
+spring.profiles.active=dev
+## Application name
+spring.application.name=DEMO
+## Port
+server.port=9000
+# Dev
+spring.devtools.add-properties=true
+# Log
+logging.level.io.robbinespu=trace
+logging.level.org.springframework.web=trace
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+## JPA/Hibernate
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
+spring.sql.init.enabled=true
+spring.datasource.url=jdbc:mariadb://localhost:9006/DB_demo?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+# others
+spring.output.ansi.enabled=ALWAYS
